--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -14,7 +14,12 @@
        style="display: block; top: auto; left: auto; bottom: auto; right: auto; position: relative; margin: 0 auto auto; box-sizing: content-box; width: 100%; min-height: 44px; height: auto; padding-top: 0; padding-bottom: 0;">
     <nav id="nav" style="position: relative; top: 0; left: 0; bottom: auto; right: auto; width: 100%;">
       <div class="navbar">
+        <h1 *ngIf="messages && messages.length > 0">Welcome Messages</h1>
+        <ul *ngIf="messages && messages.length > 0">
+          <li *ngFor="let message of messages">{{ message }}</li>
+        </ul>
         <div class="brand"><a href="/#welcome">Landon <span>Hotel</span></a></div>
+
       </div><!-- navbar -->
     </nav>
   </div>
@@ -23,7 +28,8 @@
   <div class="scene" id="welcome">
     <article class="content">
 
- 
+
+
 
       <div class="row">
         <div class=""col-12>
@@ -58,7 +64,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
