--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -80,8 +80,10 @@
                   <img src="assets/images/intro_room.jpg" alt="Intro Gallery Room Sample Pictures">
                 </td>
                 <td>
-                  <strong>Room #: {{room.roomNumber}}</strong><br/>
-                  <strong>Price: ${{room.price}}</strong>
+                  <strong>Room #: {{ room.roomNumber }}</strong><br/>
+                  <strong>${{ room.price }}.00</strong><br/>
+                  <strong>CA${{ room.price }}.00</strong><br/>
+                  <strong>€{{ room.price }}.00 </strong>
                 </td>
                 <td>
                   <button type="submit" class="btn btn-primary" (click)="reserveRoom(room.id)">Reserve</button>
