STEP B3 - Completed: Displayed Time for the live presentation

--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -28,6 +28,10 @@
   <div class="scene" id="welcome">
     <article class="content">
 
+      <div *ngIf="convertedTimes">
+        <h2>Converted Times</h2>
+        <p>{{ convertedTimes }}</p>
+      </div>
 
 
 
